e2e/tests/all/snapshots/tldr_rest_desktop.snap
---
source: e2e/src/suite.rs
description: tldr at desktop (rest)
expression: tree
---
heading "A page" [level=1]
  StaticText "A page"
button "TLDR" [expanded=false] [haspopup=menu]
  StaticText "TLDR"
