e2e/tests/all/snapshots/tldr_sized_rest_mobile.snap
---
source: e2e/src/suite.rs
description: tldr_sized at mobile (rest)
expression: tree
---
button "TLDR" [expanded=false] [haspopup=menu]
  StaticText "TLDR"
button "TLDR" [expanded=false] [haspopup=menu]
  StaticText "TLDR"
button "TLDR" [expanded=false] [haspopup=menu]
  StaticText "TLDR"
button "TLDR" [expanded=false] [haspopup=menu]
  StaticText "TLDR"
button "Summarize with AI" [expanded=false] [haspopup=menu]
button "Summarize with AI" [expanded=false] [haspopup=menu]
button "Summarize with AI" [expanded=false] [haspopup=menu]
button "Summarize with AI" [expanded=false] [haspopup=menu]
