e2e/tests/all/snapshots/toolbar-editor_help_desktop.snap
---
source: e2e/src/suite.rs
description: toolbar-editor at desktop (help)
expression: tree
---
toolbar "Formatting" [orientation=horizontal]
  button "Bold"
    StaticText "Bold"
  button "Italic"
    StaticText "Italic"
  button "Shortcuts"
    StaticText "Shortcuts"
textbox "Text"
dialog "Keyboard shortcuts" [modal]
  heading "Keyboard shortcuts" [level=2]
    StaticText "Keyboard shortcuts"
  button "Close"
  DescriptionList
    term "Alt + F10"
      StaticText "Alt"
      StaticText "+"
      StaticText "F10"
    definition
      StaticText "Go to the toolbar"
    term "Ctrl + Shift + K"
      StaticText "Ctrl"
      StaticText "+"
      StaticText "Shift"
      StaticText "+"
      StaticText "K"
    definition
      StaticText "Insert a link"
