e2e/tests/all/snapshots/toolbar-editor_rest_mobile.snap
---
source: e2e/src/suite.rs
description: toolbar-editor at mobile (rest)
expression: tree
---
toolbar "Formatting"
  button "Bold"
    StaticText "Bold"
  button "Italic"
    StaticText "Italic"
  button "Shortcuts"
    StaticText "Shortcuts"
textbox "Text"
