e2e/tests/all/snapshots/toolbar-vertical_rest_desktop.snap
---
source: e2e/src/suite.rs
description: toolbar-vertical at desktop (rest)
expression: tree
---
toolbar "Tools" [orientation=vertical]
  button "Pen"
    StaticText "P"
  separator [orientation=horizontal]
  button "Eraser"
    StaticText "E"
  button "Fill"
    StaticText "F"
