e2e/tests/all/snapshots/toolbar-vertical_rest_mobile.snap
---
source: e2e/src/suite.rs
description: toolbar-vertical at mobile (rest)
expression: tree
---
toolbar "Tools" [orientation=vertical]
  button "Pen"
    StaticText "P"
  separator [orientation=horizontal]
  button "Eraser"
    StaticText "E"
  button "Fill"
    StaticText "F"
